--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,13 @@
 repos:
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.7.4
+    rev: v1.11.0
     hooks:
       - id: terraform_fmt
       - id: terraform_docs
+      - id: terraform_docs_replace
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.0.0
     hooks:
       - id: check-merge-conflict
       - id: trailing-whitespace
-      - id: check-yaml
       - id: check-added-large-files
